k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: choice-editor-service
  labels:
    app: choice-editor
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: choice-editor
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
